traefik/deployments/ingress-routes/ingressroute-gotoweb.yaml
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gotoweb
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gotoweb.example.com`)
      kind: Rule
      services:
        - name: gotoweb-gotoweb
          port: 10800
