traefik/deployments/ingress-routes/ingressroute-restapi.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: restfulgo
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rest.example.com`)
      kind: Rule
      services:
        - name: rest-restfulapi
          port: 8080
